--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_de_DE.json
@@ -90,5 +90,8 @@
   "pci_projects_project_instances_add_instance_confirmation_info": "Sie sind im Begriff, eine Instanz zu erstellen. Die Erstellung dieser Instanz kann einige Minuten in Anspruch nehmen. Möchten Sie fortfahren?",
   "pci_projects_project_instances_add_instance_confirmation_create": "Ja.",
   "pci_projects_project_instances_add_instance_confirmation_cancel": "Nein",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Nicht verfügbar für diese Art von Instanz."
+  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Nicht verfügbar für diese Art von Instanz.",
+  "pci_projects_project_instances_windows_private_mode_description1": "Bei Windows-Instanzen, die mit dem Modus „privates Netzwerk“ (vRack) erstellt wurden, sind die Windows-Lizenzen nicht automatisch aktiviert. In diesem Fall müssen Sie die Lizenz manuell aktivieren, um auf alle Windows-Dienste zugreifen zu können.",
+  "pci_projects_project_instances_windows_private_mode_description2": "Für mehr Informationen ",
+  "pci_projects_project_instances_windows_private_mode_description3": "Sehen Sie sich die Anleitung an"
 }
