--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_en_GB.json
@@ -90,5 +90,8 @@
   "pci_projects_project_instances_add_instance_confirmation_info": "You are about to create an Instance. Please note that it may take a few minutes to create this Instance. Do you wish to continue?",
   "pci_projects_project_instances_add_instance_confirmation_create": "OK - continue",
   "pci_projects_project_instances_add_instance_confirmation_cancel": "Cancel",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Not available on this instance type."
+  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Not available on this instance type.",
+  "pci_projects_project_instances_windows_private_mode_description1": "Windows instances created with private network mode (vRack) do not have their Windows licences automatically enabled. In this case, you must activate the licence manually to access all Windows services.",
+  "pci_projects_project_instances_windows_private_mode_description2": "For more information, ",
+  "pci_projects_project_instances_windows_private_mode_description3": "Please refer to this guide"
 }
