--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_es_ES.json
@@ -90,5 +90,8 @@
   "pci_projects_project_instances_add_instance_confirmation_info": "Va a crear una instancia. La creación de esta instancia puede tardar algunos minutos. ¿Seguro/a que quiere continuar?",
   "pci_projects_project_instances_add_instance_confirmation_create": "Sí",
   "pci_projects_project_instances_add_instance_confirmation_cancel": "No",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "No disponible en este tipo de instancia."
+  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "No disponible en este tipo de instancia.",
+  "pci_projects_project_instances_windows_private_mode_description1": "En las instancias Windows creadas con el modo de red privada (vRack), las licencias Windows no se activan automáticamente. En este caso, deberá activar la licencia manualmente para poder acceder a todos los servicios Windows.",
+  "pci_projects_project_instances_windows_private_mode_description2": "Para más información, ",
+  "pci_projects_project_instances_windows_private_mode_description3": "consulte nuestra guía."
 }
