--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_fr_CA.json
@@ -57,6 +57,9 @@
   "pci_projects_project_instances_add_attch_floating_ip_banner_description1": "L'instance restera privée, vous ne pourrez y accéder que si une adresse Floating IP y est attachée ou qu'une instance SSH-Proxy distincte est disponible dans votre réseau.",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description2": "Pour plus d’informations, ",
   "pci_projects_project_instances_add_attch_floating_ip_banner_description3": "N’hésitez pas à consulter ce guide",
+  "pci_projects_project_instances_windows_private_mode_description1": "Les instances Windows créées avec le mode réseau privé (vRack) n’ont pas leurs licences Windows automatiquement activées. Dans ce cas, vous devez activer la licence manuellement afin d’avoir accès à tous les services Windows.",
+  "pci_projects_project_instances_windows_private_mode_description2": "Pour plus d’informations, ",
+  "pci_projects_project_instances_windows_private_mode_description3": "N’hésitez pas à consulter ce guide",
   "pci_projects_project_instances_add_create_floating_ip_action": "Créer une nouvelle Floating IP",
   "pci_projects_project_instances_add_select_floating_ip_label": "Sélectionnez une Floating IP",
   "pci_projects_project_instances_add_create_floating_ip_banner_info": "La création de votre Floating IP se fera à la fin du processus de configuration.",
