--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_it_IT.json
@@ -90,5 +90,8 @@
   "pci_projects_project_instances_add_instance_confirmation_info": "Stai per creare un'Istanza. Ti ricordiamo che la creazione di questa istanza potrebbe richiedere alcuni minuti. Vuoi davvero continuare?",
   "pci_projects_project_instances_add_instance_confirmation_create": "Sì",
   "pci_projects_project_instances_add_instance_confirmation_cancel": "No",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Non disponibile su questo tipo di istanza"
+  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Non disponibile su questo tipo di istanza",
+  "pci_projects_project_instances_windows_private_mode_description1": "Nelle istanze Windows create con la modalità di rete privata (vRack), le licenze Windows non sono attive automaticamente. In questo caso, è necessario attivare manualmente la licenza per avere accesso a tutti i servizi Windows.",
+  "pci_projects_project_instances_windows_private_mode_description2": "Per ulteriori informazioni, ",
+  "pci_projects_project_instances_windows_private_mode_description3": "consulta questa guida."
 }
