--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pl_PL.json
@@ -90,5 +90,8 @@
   "pci_projects_project_instances_add_instance_confirmation_info": "Jesteś w trakcie tworzenia instancji. Utworzenie tej instancji może zająć kilka minut. Czy chcesz kontynuować?",
   "pci_projects_project_instances_add_instance_confirmation_create": "Tak.",
   "pci_projects_project_instances_add_instance_confirmation_cancel": "Nie",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Nie jest dostępne dla tego typu instancji."
+  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Nie jest dostępne dla tego typu instancji.",
+  "pci_projects_project_instances_windows_private_mode_description1": "Instancje Windows utworzone z wykorzystaniem trybu prywatnej sieci (vRack) nie mają automatycznie włączonych licencji Windows. W tym przypadku należy aktywować licencję ręcznie, aby uzyskać dostęp do wszystkich usług Windows.",
+  "pci_projects_project_instances_windows_private_mode_description2": "Więcej informacji ",
+  "pci_projects_project_instances_windows_private_mode_description3": "Sprawdź przewodnik"
 }
