--- a/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/instances/add/translations/Messages_pt_PT.json
@@ -90,5 +90,8 @@
   "pci_projects_project_instances_add_instance_confirmation_info": "Está prestes a criar uma Instância. Atenção: a criação desta instância pode demorar alguns minutos. Deseja continuar?",
   "pci_projects_project_instances_add_instance_confirmation_create": "OK, vamos lá",
   "pci_projects_project_instances_add_instance_confirmation_cancel": "Não",
-  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Não disponível neste tipo de instância."
+  "pci_projects_project_instances_add_attach_floating_ip_availability_flavorType_warning": "Não disponível neste tipo de instância.",
+  "pci_projects_project_instances_windows_private_mode_description1": "As instâncias Windows criadas com o modo de rede privada (vRack) não têm as suas licenças Windows automaticamente ativadas. Neste caso, deverá ativar a licença manualmente para ter acesso a todos os serviços Windows.",
+  "pci_projects_project_instances_windows_private_mode_description2": "Para mais informações, ",
+  "pci_projects_project_instances_windows_private_mode_description3": "consulte este guia"
 }
