--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/datacenters/translations/Messages_en_GB.json
@@ -76,5 +76,13 @@
   "dedicatedCloud_datacenters_commercial_name_NSX-T-VROPS": "NSX with vROps",
   "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX": "NSX",
   "dedicatedCloud_datacenters_commercial_name_NSX-T-NSX-VROPS": "NSX with vROps",
-  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX"
+  "dedicatedCloud_datacenters_commercial_name_NSX-T-UNKNOWN": "NSX",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-HDS": "vSphere HDS",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-HIPAA": "vSphere HIPAA",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-PCIDSS": "vSphere PCI DSS",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-VROPS": "vSphere with vROps",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-NSX": "vSphere",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-NSX-VROPS": "vSphere with vROps",
+  "dedicatedCloud_datacenters_commercial_name_VSPHERE-UNKNOWN": "vSphere"
 }
