--- a/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/components/dedicated-cloud/translations/Messages_en_GB.json
@@ -247,5 +247,7 @@
   "dedicatedCloud_survey_link": "give your feedback on this interface",
   "ip_order_renew_EPCC": "Your IPs will be automatically renewed with your Dedicated Cloud infrastructure.",
   "ip_order_renew_MBM": "Your IPs will be automatically renewed with your Managed Bare Metal infrastructure.",
-  "dedicatedCloud_premier_sbg_order_warning": "We are not able to take new orders on our SBG site. Our teams are fully mobilised, and we are working hard to restore our order capacity in the near future."
+  "dedicatedCloud_premier_sbg_order_warning": "We are not able to place new orders on our SBG website. Our teams are fully mobilised, and we are working hard to restore this ordering capability in the near future.",
+  "dedicatedCloud_banner_new_product": "You can now order datacentres that match different VMware software packages within the same Private Cloud environment.",
+  "dedicatedCloud_banner_new_product_link": "Find out more"
 }
