--- a/packages/manager/apps/container/src/public/translations/user-account-menu/Messages_fr_CA.json
+++ b/packages/manager/apps/container/src/public/translations/user-account-menu/Messages_fr_CA.json
@@ -10,10 +10,13 @@
   "user_account_menu_support_level_premium-accredited_trusted": "Zone de confiance Premium Advanced",
   "user_account_menu_support_level_business_trusted": "Zone de confiance Business",
   "user_account_menu_support_level_enterprise_trusted": "Zone de confiance Enterprise",
-  "user_account_menu_role_user": "Connecté en tant que sous-utilisateur",
+  "user_account_menu_role_account": "Connecté au compte administrateur",
+  "user_account_menu_role_user": "Connecté avec un compte utilisateur",
   "user_account_menu_role_none": "Connecté en lecture seule",
   "user_account_menu_role_provider": "Connecté en SSO",
   "user_account_menu_user_id": "Identifiant : <strong>{{nichandle}}</strong>",
+  "user_account_menu_notification_email": "Notification : {{email}}",
+  "user_account_menu_notification_email_strong": "Notification : <strong>{{email}}</strong>",
   "user_account_menu_profile": "Mon profil",
   "user_account_menu_logout": "Me déconnecter",
   "user_account_menu_payment_method_title": "Moyen de paiement",
