--- a/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_en_GB.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/users/translations/Messages_en_GB.json
@@ -19,8 +19,8 @@
   "user_users_error": "An error has occurred:",
   "user_users_role": "Role",
   "user_roles_admin": "Administrator",
-  "user_roles_regular": "User",
-  "user_roles_unprivileged": "None",
+  "user_roles_regular": "Restricted administrator",
+  "user_roles_unprivileged": "Read-only",
   "user_users_disable": "Disable user",
   "user_users_delete_modal_step1_question": "Are you sure you want to delete the user <strong>{{login}}</strong>?",
   "user_users_disable_modal_step1_question": "Are you sure you want to disable the user <strong>{{login}}</strong>?",
@@ -114,5 +114,7 @@
   "user_users_groups_update_error_message": "An error has occurred updating the group:",
   "user_users_groups_update_modal_group_description": "Group description",
   "user_users_groups_update": "Update group",
-  "user_users_groups_table_description": "Identity provider groups"
+  "user_users_groups_table_description": "Identity provider groups",
+  "user_roles_none": "None",
+  "user_users_group": "Group"
 }
