--- a/packages/manager/modules/pci/src/projects/project/quota/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/quota/translations/Messages_fr_CA.json
@@ -24,5 +24,6 @@
   "pci_projects_project_quota_autoscaling_on": "Activé",
   "pci_projects_project_quota_autoscaling_off": "Désactivé",
   "pci_projects_project_quota_autoscaling_error": "Une erreur est survenue lors de la mise à jour du quota autoscalé.",
-  "pci_projects_project_quota_autoscaling_help": "Votre quota est amené à évoluer automatiquement en fonction de votre usage et selon un certain nombre de critères."
+  "pci_projects_project_quota_autoscaling_help": "Votre quota est amené à évoluer automatiquement en fonction de votre usage et selon un certain nombre de critères.",
+  "pci_projects_project_quota_error_forbidden": "Vous n'avez pas suffisamment de droits pour gérer vos quotas. Veuillez contacter le propriétaire du service"
 }
