--- a/packages/manager/modules/pci/src/projects/project/training/dashboard/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/training/dashboard/translations/Messages_en_GB.json
@@ -21,5 +21,6 @@
   "pci_projects_project_training_dashboard_users_list_description": "Description",
   "pci_projects_project_training_dashboard_users_list_none": "You have not created any users with the role \"AI Training Operator\" and \"ObjectStore Operator\"",
   "pci_projects_project_training_dashboard_jobs_list_see_jobs": "View all jobs",
-  "pci_projects_project_training_jobs_resubmit": "Relaunch"
+  "pci_projects_project_training_jobs_resubmit": "Relaunch",
+  "pci_projects_project_training_dashboard_error_forbidden": "You do not have enough rights to view your billing data. Please contact the service owner"
 }
