--- a/packages/manager/modules/pci/src/projects/project/training/dashboard/translations/Messages_fr_CA.json
+++ b/packages/manager/modules/pci/src/projects/project/training/dashboard/translations/Messages_fr_CA.json
@@ -21,5 +21,6 @@
   "pci_projects_project_training_dashboard_users_list_description": "Description",
   "pci_projects_project_training_dashboard_users_list_none": "Vous n'avez créé aucun utilisateur avec les rôles « AI Training Operator » et « ObjectStore Operator »",
   "pci_projects_project_training_dashboard_jobs_list_see_jobs": "Voir tous les jobs",
-  "pci_projects_project_training_jobs_resubmit": "Relancer"
+  "pci_projects_project_training_jobs_resubmit": "Relancer",
+  "pci_projects_project_training_dashboard_error_forbidden": "Vous n'avez pas suffisamment de droits pour afficher vos données de facturation. Veuillez contacter le propriétaire du service"
 }
