feat(spfemailpro): add spf on emailpro
Ticket: DTRSD-116877

Signed-off-by: maximeVaillant <maxime.vaillant@ovhcloud.com>

--- a/packages/manager/modules/emailpro/src/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/emailpro/src/dashboard/translations/Messages_fr_FR.json
@@ -675,6 +675,14 @@
   "emailpro_tab_domain_diagnostic_srv": "SRV",
   "emailpro_tab_domain_diagnostic_srv_title": "Diagnostic SRV",
   "emailpro_tab_domain_diagnostic_srv_toolbox_ok": "Configuration automatique effectuée",
+  "emailpro_tab_domain_diagnostic_spf_intro_ovh": "Votre domaine est hébergé chez OVH, vous pouvez configurer le champ SPF de votre domaine {0} de la manière suivante",
+  "emailpro_tab_domain_diagnostic_spf_label_champ": "Champ SPF",
+  "emailpro_tab_domain_diagnostic_spf_config": "Sous domaine : <strong>{{t0}}</strong><br /> Cible : <strong>{{t1}}</strong>",
+  "emailpro_tab_domain_diagnostic_spf_no_ovh": "Si le domaine n'est pas géré par le même identifiant client que le service Exchange ou si votre domaine n'est pas hébergé chez OVH, la configuration automatique n'est pas possible. Veuillez créer le champ SPF sur ce domaine manuellement en donnant les mêmes informations que ci-dessous.",
+  "emailpro_tab_domain_diagnostic_spf_recap": "Un champ SPF va être ajouté dans la zone DNS de votre domaine.",
+  "emailpro_tab_domain_diagnostic_spf": "SPF",
+  "emailpro_tab_domain_diagnostic_spf_title": "Diagnostic SPF",
+  "emailpro_tab_domain_diagnostic_spf_toolbox_ok": "Configuration automatique effectuée",
   "emailpro_tab_domain_error_message": "Une erreur est survenue lors du chargement de vos domaines.",
   "emailpro_tab_domain_diagnostic_cname": "CNAME",
   "emailpro_tab_domain_status": "Statut",
