--- a/packages/manager/apps/telecom/src/app/telecom/telephony/service/contact/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/telecom/src/app/telecom/telephony/service/contact/translations/Messages_fr_FR.json
@@ -22,6 +22,8 @@
   "telephony_service_contact_email": "Adresse email",
   "telephony_service_contact_country": "Pays",
   "telephony_service_contact_zipcode": "Code postal",
+  "telephony_service_contact_outwardcode": "Outward code",
+  "telephony_service_contact_inwardcode": "Inward code",
   "telephony_service_contact_city": "Ville",
   "telephony_service_contact_cedex": "Cedex",
   "telephony_service_contact_urbandistrict": "Arrondissement (pour Paris, Lyon et Marseille)",
@@ -57,6 +59,7 @@
   "telephony_service_contact_status_done": "Effectué",
   "telephony_service_contact_apply": "Appliquer les modifications",
   "telephony_service_contact_must_fill": "Ce champ est obligatoire.",
+  "telephony_service_contact_bad_inward": "Le code doit être composé d'un chiffre suivi de 2 caractères alphabétiques.",
   "telephony_service_contact_city_not_found": "Aucune ville n’a été trouvée pour ce code postal.",
   "telephony_service_contact_success": "Vos coordonnées ont bien été mises à jour.",
   "telephony_service_contact_bulk_all_success": "La modification des coordonnées a bien été appliquée aux services sélectionnés.",
