--- a/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/dedicated/client/app/account/user/components/newAccountForm/translations/Messages_fr_FR.json
@@ -759,5 +759,7 @@
   "signup_enum_IN_area_IN-TR": "Tripura",
   "signup_enum_IN_area_IN-UP": "Uttar Pradesh",
   "signup_enum_IN_area_IN-UT": "Uttarakhand",
-  "signup_enum_IN_area_IN-WB": "West Bengal"
+  "signup_enum_IN_area_IN-WB": "West Bengal",
+  "signup_information_banner_for_indian_subsidiary": "Pour modifier des informations relatives à votre compte, veuillez contacter notre assistance client en ",
+  "signup_information_banner_link_for_indian_subsidiary": "cliquant ici."
 }
