--- a/packages/manager/modules/vps/src/vps/translations/Messages_en_GB.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_en_GB.json
@@ -540,5 +540,6 @@
   "vps_dashboard_snapshot_download_modal_snapshot_curl_success": "Download command generated successfully.",
   "vps_dashboard_snapshot_download_modal_snapshot_curl_info": "Please copy the CURL command above, and run it on your terminal. To learn more about CURL, <a href=\"{{curlDocumentationLink}}\" target=\"_blank\">click here</a>.",
   "vps_dashboard_snapshot_download_modal_snapshot_button_label": "Generate download link",
-  "vps_configuration_download_snapshot_title_button": "Download Snapshot"
+  "vps_configuration_download_snapshot_title_button": "Download Snapshot",
+  "vps_dashboard_snapshot_download_modal_snapshot_error_download_not_ready": "The snapshot is being created. Please try again later when this process is complete."
 }
