--- a/packages/manager/modules/vps/src/vps/translations/Messages_it_IT.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_it_IT.json
@@ -540,5 +540,6 @@
   "vps_dashboard_snapshot_download_modal_snapshot_curl_success": "Comando di download generato correttamente.",
   "vps_dashboard_snapshot_download_modal_snapshot_curl_info": "Copia il comando CURL qui sotto ed eseguilo sul tuo terminale. Per maggiori informazioni su CURL, <a href=\"{{curlDocumentationLink}}\" target=\"_blank\">clicca qui</a>.",
   "vps_dashboard_snapshot_download_modal_snapshot_button_label": "Generare il link di download",
-  "vps_configuration_download_snapshot_title_button": "Scaricare lo Snapshot"
+  "vps_configuration_download_snapshot_title_button": "Scaricare lo Snapshot",
+  "vps_dashboard_snapshot_download_modal_snapshot_error_download_not_ready": "Lo Snapshot è in fase di creazione, ti preghiamo di riprovare più tardi al termine del processo."
 }
