--- a/packages/manager/modules/vps/src/vps/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/vps/src/vps/translations/Messages_pl_PL.json
@@ -540,5 +540,6 @@
   "vps_dashboard_snapshot_download_modal_snapshot_curl_success": "Polecenie pobrania zostało utworzone.",
   "vps_dashboard_snapshot_download_modal_snapshot_curl_info": "Skopiuj powyższe polecenie CURL i uruchom je na Twoim urządzeniu. Aby uzyskać więcej informacji na temat CURL, <a href=\"{{curlDocumentationLink}}\" target=\"_blank\">kliknij tutaj</a>.",
   "vps_dashboard_snapshot_download_modal_snapshot_button_label": "Wygeneruj link do pobrania",
-  "vps_configuration_download_snapshot_title_button": "Pobierz snapshot"
+  "vps_configuration_download_snapshot_title_button": "Pobierz snapshot",
+  "vps_dashboard_snapshot_download_modal_snapshot_error_download_not_ready": "Trwa tworzenie snapshota. Spróbuj ponownie później, kiedy ten proces zostanie zakończony."
 }
