fix(web.hosting): add offer content on dashboard
ref: MANAGER-11053

Signed-off-by: Guillaume Hyenne <guillaume.hyenne@ovhcloud.com>

--- a/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
+++ b/packages/manager/apps/web/client/app/hosting/dashboard/translations/Messages_fr_FR.json
@@ -131,6 +131,15 @@
   "hosting_dashboard_service_offer_PERFORMANCE_4": "Performance 4",
   "hosting_dashboard_service_offer_KIMSUFI_2015": "Kimsufi 2015",
   "hosting_dashboard_service_offer_KS": "Kimsufi 2015",
+  "hosting_dashboard_service_offer_HOSTING_FREE_100_M": "Hébergement gratuit 100M",
+  "hosting_dashboard_service_offer_HOSTING_STARTER_OVH": "Starter",
+  "hosting_dashboard_service_offer_HOSTING_STARTER": "Starter",
+  "hosting_dashboard_service_offer_HOSTING_PERSO": "Perso",
+  "hosting_dashboard_service_offer_HOSTING_PRO": "Pro",
+  "hosting_dashboard_service_offer_HOSTING_PERFORMANCE_1": "Performance 1",
+  "hosting_dashboard_service_offer_HOSTING_PERFORMANCE_2": "Performance 2",
+  "hosting_dashboard_service_offer_HOSTING_PERFORMANCE_3": "Performance 3",
+  "hosting_dashboard_service_offer_HOSTING_PERFORMANCE_4": "Performance 4",
   "hosting_dashboard_service_offer_downgrade_KIMSUFI_2015": "Vous souhaitez passer sur une offre Kimsufi 2015, l'accès au support n'est plus inclus et vous devrez utiliser notre système de tickets pour contacter l'assistance.",
   "hosting_dashboard_service_offer_downgrade_KIMSUFI_2015_agree": "Je reconnais avoir pris connaissance de l'offre kimsufi 2015 et valide ma demande de migration",
   "hosting_dashboard_service_offer_KIMSUFI_2015_support": "Hébergement web kimsufi : le support se fait uniquement via un ticket d'assistance (menu Assistance)",
