--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_en_GB.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_en_GB.json
@@ -1,13 +1,13 @@
 {
   "pci_app_add_review": "App configuration",
   "pci_app_add_review_region": "Region",
-  "pci_app_add_review_price_partner": "Licence price {{partner}}",
+  "pci_app_add_review_price_partner": "Partner licence price {{ partner }}",
   "pci_app_add_review_price_partner_free": "Free for {{partner}}",
-  "pci_app_add_review_price_resource": "Selected resource prices",
+  "pci_app_add_review_price_resource": "Price for selected resources",
   "pci_app_add_review_price_resource_free": "Resources offered by OVHcloud during the beta testing phase",
   "pci_app_add_review_price_total": "Total cost",
   "pci_app_add_review_price_info": "{{price}} ex. VAT/hour",
-  "pci_app_add_review_resources": "Model and number of replicas chosen",
+  "pci_app_add_review_resources": "Model and number of resources per replica",
   "pci_app_add_review_scaling": "Scaling",
   "pci_app_add_review_scaling_static": "Fixed scaling",
   "pci_app_add_review_scaling_auto": "Auto-scaling",
@@ -16,5 +16,6 @@
   "pci_app_add_review_scaling_max_replicas": "Maximum number of replicas:",
   "pci_app_add_review_scaling_trigger_resource": "Metric monitored:",
   "pci_app_add_review_scaling_trigger_resource_threshold": "Trigger threshold:",
-  "pci_app_add_review_probe": "Readiness probe"
+  "pci_app_add_review_probe": "Readiness probe",
+  "pci_app_add_review_image": "Image"
 }
