--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_pl_PL.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_pl_PL.json
@@ -1,13 +1,13 @@
 {
   "pci_app_add_review": "Konfiguracja aplikacji",
   "pci_app_add_review_region": "Region",
-  "pci_app_add_review_price_partner": "Cena licencji {{ partner }}",
+  "pci_app_add_review_price_partner": "Cena licencji partnera {{ partner }}",
   "pci_app_add_review_price_partner_free": "Oferowana przez {{ partner }}",
-  "pci_app_add_review_price_resource": "Cena wybranych zasobów",
+  "pci_app_add_review_price_resource": "Ceny wybranych zasobów",
   "pci_app_add_review_price_resource_free": "Zasób/zasoby oferowane przez OVHcloud w fazie beta",
   "pci_app_add_review_price_total": "Cena całkowita",
   "pci_app_add_review_price_info": "{{ price }} netto / godzina",
-  "pci_app_add_review_resources": "Model i liczba wybranych replik",
+  "pci_app_add_review_resources": "Model i liczba zasobów na replikę",
   "pci_app_add_review_scaling": "Skalowanie",
   "pci_app_add_review_scaling_static": "Stałe skalowanie",
   "pci_app_add_review_scaling_auto": "Automatyczne skalowanie (Autoscaling)",
@@ -16,5 +16,6 @@
   "pci_app_add_review_scaling_max_replicas": "Maksymalna liczba replik:",
   "pci_app_add_review_scaling_trigger_resource": "Monitorowana metryka:",
   "pci_app_add_review_scaling_trigger_resource_threshold": "Próg uruchomienia:",
-  "pci_app_add_review_probe": "Sonda dostępności"
+  "pci_app_add_review_probe": "Sonda dostępności",
+  "pci_app_add_review_image": "Obraz"
 }
