--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_de_DE.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_de_DE.json
@@ -1,13 +1,13 @@
 {
   "pci_app_add_review": "Konfiguration Ihrer App",
   "pci_app_add_review_region": "Region",
-  "pci_app_add_review_price_partner": "Preis der Lizenz {{ partner }}",
+  "pci_app_add_review_price_partner": "Preis der Partnerlizenz {{ partner }}",
   "pci_app_add_review_price_partner_free": "Geschenkt von {{ partner }}",
   "pci_app_add_review_price_resource": "Preis der ausgewählten Ressourcen",
   "pci_app_add_review_price_resource_free": "Die Ressource(n) stellt Ihnen OVHcloud während der Beta-Phase gratis zur Verfügung.",
   "pci_app_add_review_price_total": "Gesamtpreis",
   "pci_app_add_review_price_info": "{{ price }} inkl. MwSt. / Stunde",
-  "pci_app_add_review_resources": "Modell und Anzahl der ausgewählten Replika(s)",
+  "pci_app_add_review_resources": "Modell und Anzahl der Ressourcen pro Replikat",
   "pci_app_add_review_scaling": "Dimensionierung",
   "pci_app_add_review_scaling_static": "Festgelegte Dimensionierung",
   "pci_app_add_review_scaling_auto": "Automatische Dimensionierung (Autoscaling)",
@@ -16,5 +16,6 @@
   "pci_app_add_review_scaling_max_replicas": "Höchstzahl an Replikas:",
   "pci_app_add_review_scaling_trigger_resource": "Überwachte Metrik:",
   "pci_app_add_review_scaling_trigger_resource_threshold": "Schwellenwert:",
-  "pci_app_add_review_probe": "Verfügbarkeitsprobe"
+  "pci_app_add_review_probe": "Verfügbarkeitsprobe",
+  "pci_app_add_review_image": "Image"
 }
