--- a/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/add/components/app-review/translations/Messages_es_ES.json
@@ -1,13 +1,13 @@
 {
   "pci_app_add_review": "Configuración de su app",
   "pci_app_add_review_region": "Región",
-  "pci_app_add_review_price_partner": "Precio de la licencia {{ partner }}",
+  "pci_app_add_review_price_partner": "Precio de la licencia de partners {{ partner }}",
   "pci_app_add_review_price_partner_free": "Gratis para {{ partner }}",
   "pci_app_add_review_price_resource": "Precio de los recursos seleccionados",
   "pci_app_add_review_price_resource_free": "Recursos ofrecidos por OVHcloud durante la fase beta",
   "pci_app_add_review_price_total": "Precio total",
   "pci_app_add_review_price_info": "{{price}}/hora + IVA",
-  "pci_app_add_review_resources": "Modelo y número de réplicas seleccionados",
+  "pci_app_add_review_resources": "Modelo y número de recursos por réplica",
   "pci_app_add_review_scaling": "Dimensionamiento",
   "pci_app_add_review_scaling_static": "Dimensionamiento fijo",
   "pci_app_add_review_scaling_auto": "Dimensionamiento automático (autoscaling)",
@@ -16,5 +16,6 @@
   "pci_app_add_review_scaling_max_replicas": "Número máximo de réplicas:",
   "pci_app_add_review_scaling_trigger_resource": "Métrica vigilada:",
   "pci_app_add_review_scaling_trigger_resource_threshold": "Umbral de activación:",
-  "pci_app_add_review_probe": "Sonda de disponibilidad"
+  "pci_app_add_review_probe": "Sonda de disponibilidad",
+  "pci_app_add_review_image": "Imagen"
 }
