--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_es_ES.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_es_ES.json
@@ -37,5 +37,10 @@
   "pci_ai_app_beta_warning_special_conditions": "AI Apps cambia de nombre y se convierte en AI Deploy. AI Deploy es un servicio sujeto a las ",
   "pci_ai_app_beta_warning_special_conditions_link": "Condiciones Especiales de los Servicios Public Cloud de OVHcloud",
   "pci_ai_app_list_creation_date": "Fecha de creación",
-  "pci_ai_app_list_last_update_date": "Fecha de actualización"
+  "pci_ai_app_list_last_update_date": "Fecha de actualización",
+  "pci_ai_app_list_image": "Imagen",
+  "pci_ai_app_list_image_provided_by": "Imagen proporcionada por {{partnerName}}",
+  "pci_ai_app_list_resources": "Recursos desplegados",
+  "pci_ai_app_list_resources_cpu": "{{cpu}} CPU / {{replicas}} réplicas",
+  "pci_ai_app_list_resources_gpu": "{{gpu}} GPU / {{replicas}} réplicas"
 }
