--- a/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_pt_PT.json
+++ b/packages/manager/modules/pci/src/projects/project/ai/apps/translations/Messages_pt_PT.json
@@ -37,5 +37,10 @@
   "pci_ai_app_beta_warning_special_conditions": "AI Apps muda de nome e torna-se AI Deploy. O AI Deploy é um serviço sujeito às ",
   "pci_ai_app_beta_warning_special_conditions_link": "Condições Especiais dos Serviços Public Cloud da OVHcloud",
   "pci_ai_app_list_creation_date": "Data de criação",
-  "pci_ai_app_list_last_update_date": "Data de atualização"
+  "pci_ai_app_list_last_update_date": "Data de atualização",
+  "pci_ai_app_list_image": "Imagem",
+  "pci_ai_app_list_image_provided_by": "Imagem fornecida por {{partnerName}}",
+  "pci_ai_app_list_resources": "Recursos atribuídos",
+  "pci_ai_app_list_resources_cpu": "{{cpu}} CPU / {{replicas}} réplicas",
+  "pci_ai_app_list_resources_gpu": "{{gpu}} GPU / {{replicas}} réplicas"
 }
