fix(iam): search bar was not working
ref: MANAGER-11332
Signed-off-by: Vincent Cassé <vincent.casse@corp.ovh.com>

--- a/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
+++ b/packages/manager/modules/iam/src/components/actionSelect/translations/Messages_fr_FR.json
@@ -3,10 +3,19 @@
   "iam_action_select_action_search_label": "Rechercher une action",
   "iam_action_select_all_actions_description": "Toutes les actions existantes et à venir sur tous les types de produits seront autorisées",
   "iam_action_select_all_actions_label": "Autoriser toutes les actions",
-  "iam_action_select_category_count_selection_many": "({{ selected }} actions sélectionnées / {{ total }})",
-  "iam_action_select_category_count_selection_one": "(1 action sélectionnée / {{ total }})",
-  "iam_action_select_category_count_no_selection_many": "({{ total }} actions)",
-  "iam_action_select_category_count_no_selection_one": "(1 action)",
+  "iam_action_select_category_count_total_many": "({{ total }} actions)",
+  "iam_action_select_category_count_total_one": "(1 action)",
+  "iam_action_select_category_count_selection_many_total_many": "({{ selected }} actions sélectionnées / {{ total }})",
+  "iam_action_select_category_count_selection_one_total_many": "(1 action sélectionnée / {{ total }})",
+  "iam_action_select_category_count_selection_one_total_one": "(1 action sélectionnée / {{ total }})",
+  "iam_action_select_category_count_with_search_many_total_many": "({{ filtered }} résultats / {{ total }})",
+  "iam_action_select_category_count_with_search_one_total_many": "({{ filtered }} résultat / {{ total }})",
+  "iam_action_select_category_count_with_search_one_total_one": "({{ filtered }} résultat / {{ total }})",
+  "iam_action_select_category_count_with_search_one_selection_one_total_one": "({{ selected }} action sélectionnée, {{ filtered }} résultat / {{ total }})",
+  "iam_action_select_category_count_with_search_one_selection_one_total_many": "({{ selected }} action sélectionnée, {{ filtered }} résultat / {{ total }})",
+  "iam_action_select_category_count_with_search_many_selection_one_total_many": "({{ selected }} action sélectionnée, {{ filtered }} résultats / {{ total }})",
+  "iam_action_select_category_count_with_search_one_selection_many_total_many": "({{ selected }} actions sélectionnées, {{ filtered }} résultat / {{ total }})",
+  "iam_action_select_category_count_with_search_many_selection_many_total_many": "({{ selected }} actions sélectionnées, {{ filtered }} résultats / {{ total }})",
   "iam_action_select_custom_action_button": "Ajouter",
   "iam_action_select_custom_action_error_requirements": "Cette action n'existe pas",
   "iam_action_select_custom_action_error_selected": "L'action est déjà sélectionnée",
